tests/stage3/semantic_implement_missing_method.err
type error
line: 12
missing interface method
