tests/stage3/semantic_implement_missing_method.imp
interface Score {
    function get(self) -> i32
    function add(self) -> i32
}

struct Counter {
    value: i32
}

implement Score for Counter {
    function get(self) -> i32 => self.value
}

function main() {
    print(0)
}
